2012-03-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gplt_x11.c (exec_cmd): Don't feed unknown strings directly
	to *printf.

	* src/plot3d.c (eval_3dplots): Don't mix up enums JUSTIFY and
	VERT_JUSTIFY.

	* src/plot2d.c (eval_plots): Don't mix up enums JUSTIFY and
	VERT_JUSTIFY.

	* src/graphics.c (do_plot): Don't mix up enums JUSTIFY and
	VERT_JUSTIFY.

	* src/color.c (cbtick_callback): Don't mix up enums JUSTIFY and
	VERT_JUSTIFY.

2012-03-16  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm term/svg.trm:
	Do not allow execution of popen() commands during initialization.

2012-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h src/graphics.c src/save.c src/set.c src/show.c
	src/term.c src/term_api.h docs/gnuplot.doc:
	New option "set style circle {no}wedges"

2012-03-13  Michael Reeves  <mgreeves@users.sourceforge.net>

	* src/graphics.c: Improved calculation of the margin space needed to
	hold rotated x and x2 tic labels.
	Bug #3482491

2012-03-12 Bastian Maerkisch  <bmaerkisch@web.de>

	* win/gnuplot.iss: Bump version number of installer to 4.7.

	* config/mingw/Makefile: New target 'zip' for zip file distribution.

2012-03-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h src/graphics3d.c src/util3d.c:
	Preparatory cleanup for re-working of axis reverse and range check
	processing.  This change reduces the size of code produced by macro 
	STORE_WITH_LOG_AND_UPDATE_RANGE (called >50 times)
	but does not change the runtime behavior of the program.

	* src/axis.c src/axis.h src/command.c src/gadgets.h src/mouse.c 
	src/mouse.h src/plot2d.c src/plot3d.c src/save.c src/set.c src/unset.c
	docs/gnuplot.doc:
	Change the handling of "set [xyz]range reverse".
	Get rid of flag RANGE_REVERSE.  Axis range endpoints are now always
	stored as-is (i.e. XAXIS.min is not guaranteed to be numerically less
	than XAXIS.max).  The user command "set [xyz]range ... reverse" now